@@ -1,3 +1,9 @@
+2004-10-25  Elijah Newren  <newren@math.utah.edu>
+
+	* src/screen.c (queue_windows_showing): Revert the
+	queue_windows_showing portion of the patch committed on 2004-10-16
+	for #142198--it was an ill-advised optimization.
+
 2004-10-20  Elijah Newren  <newren@math.utah.edu>
 
 	Patch from Soeren to fix the modifier key breakage introduced by
